--- a/index.html
+++ b/index.html
@@ -438,11 +438,14 @@
             <p class="meta">${nameOfSender} 
               <span>${(new Date(oldMessage.createdAt)).toLocaleString('en-GB')}</span>
               </p>
-              <p class="text">
-                <a href='${oldMessage.content.header.url}' target="_blank">Document</a>
-                </p>
             <p class="text">
-                ${oldMessage.content.templateName}
+                <span style="text-decoration: underline">Brand</span> : ${oldMessage.content.body.placeholders[0]}
+            </p>
+            <p class="text">
+              <span style="text-decoration: underline">Model</span> : ${oldMessage.content.body.placeholders[1]}
+            </p>
+            <p class="text">
+                <a href='${oldMessage.content.header.url}' target="_blank">${oldMessage.content.header.filename}</a>
             </p>
             `;
         } else {
@@ -461,7 +464,7 @@
     function outputMessage(message, id){
       console.log('Main message',message)
       const div = document.createElement('div');
-      
+
       if(message.username == agentName){
         div.classList.add('myMessage');
       } else {
@@ -474,12 +477,15 @@
           <span>${message.time}</span>
           </p>
           <p class="text">
+                <span style="text-decoration: underline">Brand</span> : ${message.text.body.placeholders[0]}
+            </p>
+            <p class="text">
+              <span style="text-decoration: underline">Model</span> : ${message.text.body.placeholders[1]}
+            </p>
+          <p class="text">
           <a href='${message.text.header.url}'
               target="_blank">Document</a>
-        </p>
-          <p class="text">
-            ${message.text.templateName}
-            </p>`;
+        </p>`;
       } else {
         if(Boolean(message.text.includes('/dossier/guid'))){
           div.innerHTML = `
