fixed bug with index.js import

--- a/index.html
+++ b/index.html
@@ -304,9 +304,8 @@
         </div>
       </div>
   </div> -->
-  <!-- <script src="/socket.io/socket.io.js" async></script> -->
   <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="/index.js"></script>
+  <!-- <script type="module" src="/index.js"></script> -->
   <script>
     var socket = io();
     let startChat = false;
