--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
       box-sizing: border-box;
       align-items: center;
       backdrop-filter: blur(10px);
+      background-color: #fff;
     }
 
     #input {
-      border: none;
       padding: 0 1rem;
       flex-grow: 1;
       margin: 0.25rem;
