--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="https://tochat.be/whatsapp-icon-green.jpg">
+  <link rel="icon" href="/whatsapp" type="image/x-icon"/>
   <link href="https://d1ber40ngqe0oz.cloudfront.net/fonts/roboto.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Delta chat</title>
@@ -242,8 +242,8 @@
     line-height: 16px;
     color: #000;
     font-weight: 300;
-    padding: 5px 10px 5px 10px;
-    margin: 10px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
+    margin: 5px 10px 10px 10px;
     border: 1px solid #ddd;
     border-radius: 10px;
     min-width: 300px;
